[package]
name = "rust-tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "sync", "macros"] }
futures = "0.3.25"

anyhow = "1.0.68"

# use rustls to avoid openssl dep
reqwest = { version = "0.11.13", features = ["rustls-tls"] }

log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
testcontainers = "0.14.0"
